--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiomysql==0.1.1
 aiosqlite==0.17.0
 anyio==3.5.0
 asgiref==3.5.0
+autopep8==2.0.1
 backports.cached-property==1.0.1
 click==8.1.3
 fastapi==0.75.2
@@ -9,18 +11,21 @@ greenlet==1.1.2
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+pycodestyle==2.10.0
 pydantic==1.9.0
 Pygments==2.12.0
+PyMySQL==1.0.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-multipart==0.0.5
 PyYAML==6.0
 six==1.16.0
 sniffio==1.2.0
-SQLAlchemy==1.4.36
+SQLAlchemy==2.0.4
 starlette==0.17.1
 strawberry-graphql==0.109.1
-typing-extensions==4.2.0
+tomli==2.0.1
+typing_extensions==4.2.0
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
